# docs/swagger.json
@@ -38,8 +38,8 @@
                 }
             }
         },
-        "/delete_person": {
-            "post": {
+        "/delete_person/{id}": {
+            "delete": {
                 "description": "Delete of one person",
                 "consumes": [
                     "application/json"
@@ -53,13 +53,11 @@
                 "summary": "Delete one person",
                 "parameters": [
                     {
-                        "description": "Delete Person",
-                        "name": "parameters",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/entity.InterfaceAPI"
-                        }
+                        "type": "string",
+                        "description": "ID Person",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -72,8 +70,8 @@
                 }
             }
         },
-        "/get_person": {
-            "post": {
+        "/get_person/{id}": {
+            "get": {
                 "description": "Get details of one person",
                 "consumes": [
                     "application/json"
@@ -87,13 +85,11 @@
                 "summary": "Get details of one person",
                 "parameters": [
                     {
-                        "description": "Get Person",
-                        "name": "parameters",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/entity.InterfaceAPI"
-                        }
+                        "type": "string",
+                        "description": "ID Person",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -107,7 +103,7 @@
             }
         },
         "/list_persons": {
-            "post": {
+            "get": {
                 "description": "Get details of all persons",
                 "consumes": [
                     "application/json"
@@ -132,7 +128,7 @@
                 }
             }
         },
-        "/update_person": {
+        "/update_person/{id}": {
             "post": {
                 "description": "Update of one person",
                 "consumes": [
@@ -147,12 +143,19 @@
                 "summary": "Update one person",
                 "parameters": [
                     {
+                        "type": "string",
+                        "description": "ID Person",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
                         "description": "Update Person",
                         "name": "parameters",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/entity.InterfaceAPI"
+                            "$ref": "#/definitions/entity.Person"
                         }
                     }
                 ],
@@ -189,6 +192,9 @@
                 "created": {
                     "type": "string"
                 },
+                "gender": {
+                    "type": "string"
+                },
                 "id": {
                     "type": "string"
                 },
@@ -196,7 +202,6 @@
                     "type": "string"
                 },
                 "name": {
-                    "description": "ID string `bson:\"_id\" json:\"_id,omitempty\"`",
                     "type": "string"
                 },
                 "updated": {
